# smol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  atlas.c  microui-header.h  microui-source.c  renderer.c  smol.cpp
assets/: Dina_i400-10.bdf  atlas.inl  ib8x16u.bdf  mk-atlas-spleen.py
examples/: hoopl.lisp
microui/: atlas.inl  makefile  microui-header.h  microui-source.c  renderer.c  renderer.h
